# Gabay

./: .env  .gitignore  Dockerfile.core  Dockerfile.worker  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.bat
.github/workflows/: pypi_publish.yml
data/: gabay_userbot.session  reminders.json
data/history/: chat_6294374079.jsonl
data/memory/: contacts_6294374079.json
data/secrets/: tokens.json
gabay/: __init__.py  cli.py  migrate_db.py  test_docker_memory.py
gabay/core/: config.py  database.py  llm_router.py  main.py  memory.py  telegram_bot.py
gabay/core/connectors/: calendar_api.py  google_api.py  imap_api.py  meta_api.py  notion_api.py  oauth.py  rss_api.py  smtp_api.py  token_manager.py  weather_api.py
gabay/core/skills/: brief.py  calendar.py  chat.py  contacts.py  docs.py  document_qa.py  email.py  message.py  news.py  pdf.py  read.py  reminders.py  research.py  save.py  search.py  setup.py  share.py  sheets.py  slides.py  weather.py
gabay/core/templates/: admin.html  config_setup.html  google_oauth_setup.html  groq_setup.html  llm_setup.html  notion_setup.html  setup.html  smtp_setup.html  timezone_setup.html  verify.html
gabay/core/utils/: admin_routes.py  dispatcher.py  llm.py  setup_routes.py  telegram.py  userbot.py  voice.py
gabay/worker/: celery_app.py  tasks.py
landing-page/: package-lock.json  package.json  wrangler.jsonc
landing-page/src/components/: Architecture.astro  Comparison.astro  DocsSidebar.astro  FAQ.astro  Features.astro  Footer.astro  Hero.astro  Integrations.astro  Navbar.astro  Setup.astro  TargetMarket.astro  ThemeToggle.astro  UseCases.astro
landing-page/src/layouts/: DocsLayout.astro  Layout.astro
tests/: test_brief_skill.py  test_llm_router.py  test_read_skill.py
(+3 files in other folders)
